--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -21,3 +21,8 @@ psycopg>=3.1.18
 pgvector==0.4.1
 PyMuPDF>=1.26.6
 nltk==3.9.1
+
+# Monitoring and metrics
+prometheus-client==0.21.1
+starlette-exporter==0.23.0
+fastapi-health==0.4.0
